# llama.cpp

./: .gitignore  build_swlp_cuda.bat
common/: arg.cpp  common.cpp  common.h
docs-zh/: README.md  llama.cpp-swlp-adaptive优化.md  llama.cpp-swlp技术设计.md  llama.cpp-swlp故障排查与常见问题.md  llama.cpp-swlp状态.md
docs-zh/history/: llama.cpp-swlp上下文.md  llama.cpp-swlp开发日志.md  llama.cpp-swlp开发计划.md  llama.cpp-swlp开发进度.md
docs-zh/reports/: comprehensive_test_review.md  docs_review.md  gap_report.md  llama.cpp-swlp测试报告.md  review-code.md  review-docs.md  test_review.md  test_scripts_review.md
examples/: CMakeLists.txt
examples/swlp-test/: CMakeLists.txt  swlp-bench.cpp  swlp-test.cpp
ggml/include/: ggml-backend.h  ggml-cuda.h  ggml.h
ggml/src/: ggml-backend.cpp  ggml-impl.h
ggml/src/ggml-cuda/: common.cuh  ggml-cuda.cu
include/: llama.h
scripts/: download_models.py  swlp_test.py  swlp_test_config.yaml
src/: CMakeLists.txt  llama-context.cpp  llama-context.h  llama-graph.cpp  llama-swlp-adaptive.cpp  llama-swlp-adaptive.h  llama-swlp-cuda.cpp  llama-swlp-cuda.h  llama-swlp-internal.h  llama-swlp-migrate.cpp  llama-swlp-migrate.h  llama-swlp-moe.cpp  llama-swlp-moe.h  llama-swlp-stats.cpp  llama-swlp-stats.h  llama-swlp-tensors.h  llama-swlp.cpp  llama-swlp.h
tools/server/: server-models.cpp  server-models.h
